Changed some text and fixed horizontal scroll

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -30,6 +30,8 @@ loading body {
 body,
 html {
     height: 100%;
+    max-width: 100vw;
+    
 }
 
 .myPic {
